--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@ label {
     display: inline-block;
 }
 
-input[type=verzenden] {
+.verzenden {
     background-color: #4CAF50;
     color: white;
     padding: 12px 12px;
@@ -72,7 +72,7 @@ input[type=verzenden] {
     width: 90px;
 }
 
-input[type=verzenden]:hover {
+.verzenden:hover {
     background-color: #45a049;
 }
 
@@ -162,7 +162,7 @@ input[type=verzenden]:hover {
               </div>
             </div>
             <div class="row">
-              <input type="verzenden" value="Verzenden">
+              <input type="button" class="verzenden" value="Verzenden">
             </div>
           </form>
         </div>
